# smart-contract-client

./: LICENSE  README.md  pyproject.toml
ipynb/: Smart_contracts.ipynb
smart_contract_client/: run_smart_contract_client.sh  smart_contract_client.py  url_mapping.py
tests/: data_items.py  test_smart_contract_client.py
